--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@ development:
   encoding: unicode
   database: blog_4soft_development
   pool: 5
-  username: blog_4soft
-  password:
+  username: postgres
+  password: hunter123#
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -43,13 +43,13 @@ test:
   encoding: unicode
   database: blog_4soft_test
   pool: 5
-  username: blog_4soft
-  password:
+  username: postgres
+  password: hunter123#
 
 production:
   adapter: postgresql
   encoding: unicode
   database: blog_4soft_production
   pool: 5
-  username: blog_4soft
-  password:
+  username: postgres
+  password: hunter123#
